--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,13 +2,44 @@
 <html>
     <head>
       <title>Flask app</title>
-      <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+      <link rel="stylesheet" href="/src/static/css/home.css">
     </head>
   <body>
-   <div class="home">
-     <h1>About me</h1>
-     <p>This website was built with Python via the Flask framework.</p>
-   </div>
+
+    <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="/src/static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          Flaskplanes
+        </a>
+      </div>
+    </nav>
+
+    <!-- WELCOME-->
+   <section id="welcome" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-8 col-sm-10 col-xs-offset-2 col-sm-offset-1 vcenter">
+          <h1>Flask app</h1>
+          <hr class="cl-xs-12" />
+          <ul class="list-incline col-xs-12">
+            <li class="btn btn-default btn-lg btn-pagina1">
+              <i class="fa fa-pagina1"></i>
+              <a href="pagina1.html"> Pagina 1</a>
+            </li>
+            <li class="btn btn-default btn-lg btn-pagina2">
+              <i class="fa fa-pagina2"></i>
+              <a href="pagina2.html"> Pagina 2</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+   </section>
+
+   <script></script>
+
   </body>
 </html>
 
