--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,14 +3,14 @@
     <head>
       <title>Flask app</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-      <link rel="stylesheet" href="/src/static/css/home.css">
+      <link rel="stylesheet" href="../static/css/home.css">
     </head>
   <body>
 
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/src/static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          <img src="../static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           Flaskplanes
         </a>
       </div>
