--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,16 +7,17 @@
     </head>
   <body>
 
+    <!-- NAVBAR -->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../templates/home.html">
           <img src="../static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           Flaskplanes
         </a>
       </div>
     </nav>
 
-    <!-- WELCOME-->
+    <!-- WELCOME -->
    <section id="welcome" class="section">
     <div class="container">
       <div class="row">
