--- a/src/templates/pagina1.html
+++ b/src/templates/pagina1.html
@@ -6,6 +6,16 @@
     <title>p1</title>
 </head>
 <body>
+     <!-- NAVBAR -->
+     <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../templates/home.html">
+            <img src="../static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            Flaskplanes
+          </a>
+        </div>
+      </nav>
+
     <h1>p1</h1>
 </body>
 </html>
