--- a/src/templates/pagina1.html
+++ b/src/templates/pagina1.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p1</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/pagina1.css">
 </head>
 <body>
      <!-- NAVBAR -->
@@ -16,6 +18,48 @@
         </div>
       </nav>
 
-    <h1>p1</h1>
+      <h2 class="text-center">Tu ciudad</h2>
+
+      <!-- Section para form y cards -->
+      <section class="content">
+        <!-- FORM -->
+        <div class="form">
+          <div class="search">
+            <input type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
+            <button><img src="../static/assets/search.svg"></button>
+          </div>
+        </div>
+
+        <!-- CARD -->
+        <div class="wrapper-grey padded">
+          <div class="container">
+            <div class="row justify-content-center"> <!-- Centra las tarjetas -->
+              <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/03/Positano-Weather.jpg?w=1600&ssl=1');">
+                  <div class="card-category">City</div>
+                  <div class="card-description">
+                    <h2>Home</h2>
+                    <p>Lovely house</p>
+                  </div>
+                  <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
+                  <a class="card-link" href="#"></a>
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-4">
+                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+                  <div class="card-category">City</div>
+                  <div class="card-description">
+                    <h2>Another City</h2>
+                    <p>Beautiful place</p>
+                  </div>
+                  <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
+                  <a class="card-link" href="#"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 </body>
 </html>
