--- a/src/templates/pagina1.html
+++ b/src/templates/pagina1.html
@@ -30,34 +30,28 @@
           </div>
         </div>
 
-        <!-- CARD -->
-        <div class="wrapper-grey padded">
-          <div class="container">
-            <div class="row justify-content-center"> <!-- Centra las tarjetas -->
-              <div class="col-xs-12 col-sm-4">
-                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/03/Positano-Weather.jpg?w=1600&ssl=1');">
-                  <div class="card-category">City</div>
-                  <div class="card-description">
-                    <h2>Home</h2>
-                    <p>Lovely house</p>
-                  </div>
-                  <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
-                  <a class="card-link" href="#"></a>
-                </div>
-              </div>
-
-              <div class="col-xs-12 col-sm-4">
-                <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
-                  <div class="card-category">City</div>
-                  <div class="card-description">
-                    <h2>Another City</h2>
-                    <p>Beautiful place</p>
-                  </div>
-                  <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
-                  <a class="card-link" href="#"></a>
-                </div>
-              </div>
+        <!-- CARD CONTAINER -->
+        <div class="card-container">
+          <!-- CARD 1 -->
+          <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/03/Positano-Weather.jpg?w=1600&ssl=1')">
+            <div class="card-category">City</div>
+            <div class="card-description">
+              <h2>Home</h2>
+              <p>Lovely house</p>
             </div>
+            <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
+            <a class="card-link" href="#"></a>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+            <div class="card-category">City</div>
+            <div class="card-description">
+              <h2>Another City</h2>
+              <p>Beautiful place</p>
+            </div>
+            <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
+            <a class="card-link" href="#"></a>
           </div>
         </div>
       </section>
