--- a/src/static/css/pagina1.css
+++ b/src/static/css/pagina1.css
@@ -5,6 +5,7 @@ html, body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background: url("https://images.unsplash.com/photo-1627719736178-dfadf8f370d9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80") no-repeat center center fixed;
 }
 
 *, *:before, *:after {
