card e informacion, aun no queda bien

--- a/src/templates/pagina1.html
+++ b/src/templates/pagina1.html
@@ -39,19 +39,33 @@
               <h2>Home</h2>
               <p>Lovely house</p>
             </div>
-            <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
-            <a class="card-link" href="#"></a>
           </div>
 
           <!-- CARD 2 -->
-          <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
-            <div class="card-category">City</div>
-            <div class="card-description">
-              <h2>Another City</h2>
-              <p>Beautiful place</p>
+          <div class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+            <div class="weather">
+              <div class="weather-content">
+                <img src="../static/assets/rain.svg" class="weather-icon">
+                <h1 class="temp"> 22°C</h1>
+                <h2 class="card-category">New York</h2>
+                <div class="details">
+                  <div class="col">
+                    <img src="../static/assets/humidity.svg">
+                    <div>
+                      <p class="humidity">50%</p>
+                      <p>Humidity</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <img src="../static/assets/wind.svg">
+                    <div>
+                      <p class="wind">15 km/h</p>
+                      <p>Wind speed</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <img class="card-image" src="https://github.com/lewagon/bootstrap-challenges/blob/master/11-Airbnb-search-form/images/anne.jpg?raw=true">
-            <a class="card-link" href="#"></a>
           </div>
         </div>
       </section>
