funciona barra de navegacion con flask

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,7 +10,7 @@
     <!-- NAVBAR -->
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../templates/home.html">
+        <a class="navbar-brand" href="/">
           <img src="../static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
           Flaskplanes
         </a>
