--- a/src/templates/pagina1.html
+++ b/src/templates/pagina1.html
@@ -11,7 +11,7 @@
      <!-- NAVBAR -->
      <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../">
             <img src="../static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             Flaskplanes
           </a>
