--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p1</title>
+    <title>City</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../static/css/pagina1.css">
+    <link rel="stylesheet" href="../static/css/city.css">
 </head>
 <body>
      <!-- NAVBAR -->
@@ -13,7 +13,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="../">
             <img src="../static/assets/airplane.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            Flaskplanes
+            SandrAir
           </a>
         </div>
       </nav>
@@ -42,7 +42,7 @@
           </div>
 
           <!-- CARD 2 -->
-          <div class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+          <div id="weather-card" class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
             <div class="weather">
               <div class="weather-content">
                 <img src="../static/assets/rain.svg" class="weather-icon">
@@ -69,5 +69,7 @@
           </div>
         </div>
       </section>
+
+      <script src="../static/js/index.js"></script>
 </body>
 </html>
