--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -26,7 +26,7 @@
         <div class="form">
           <div class="search">
             <input type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
-            <button><img src="../static/assets/search.svg"></button>
+            <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
           </div>
         </div>
 
