--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -25,7 +25,7 @@
         <!-- FORM -->
         <div class="form">
           <div class="search">
-            <input type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
+            <input id="city-name-input" type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
           </div>
         </div>
