--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -94,3 +94,7 @@ html, body {
     background-color: rgb(109, 132, 180);
     text-shadow : 0 0 0px black;
   }
+
+ul.list-incline li a{
+  text-decoration: none;
+}
