--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -46,7 +46,7 @@
             <div class="weather">
               <div class="weather-content">
                 <img src="../static/assets/rain.svg" class="weather-icon">
-                <h1 class="temp"> 22°C</h1>
+                <h1 class="temp">22°C</h1>
                 <h2 class="card-category">New York</h2>
                 <div class="details">
                   <div class="col">
@@ -57,10 +57,10 @@
                     </div>
                   </div>
                   <div class="col">
-                    <img src="../static/assets/wind.svg">
+                    <img src="../static/assets/wind.svg"> <!-- Cambiado de wind a weather -->
                     <div>
-                      <p class="wind">15 km/h</p>
-                      <p>Wind speed</p>
+                      <p class="weather">Cloudy</p> <!-- Cambiado de wind a weather -->
+                      <p>Weather</p>
                     </div>
                   </div>
                 </div>
