--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -42,12 +42,12 @@
           </div>
 
           <!-- CARD 2 -->
-          <div id="weather-card" class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+          <div id="weather-card" class="card weather-card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
             <div class="weather">
               <div class="weather-content">
                 <img src="../static/assets/rain.svg" class="weather-icon">
                 <h1 class="temp">22°C</h1>
-                <h2 class="card-category">New York</h2>
+                <h2 class="name">New York</h2>
                 <div class="details">
                   <div class="col">
                     <img src="../static/assets/humidity.svg">
@@ -57,7 +57,7 @@
                     </div>
                   </div>
                   <div class="col">
-                    <img src="../static/assets/wind.svg"> <!-- Cambiado de wind a weather -->
+                    <img src="../static/assets/wind.svg">
                     <div>
                       <p class="weather">Cloudy</p> <!-- Cambiado de wind a weather -->
                       <p>Weather</p>
