--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -34,10 +34,10 @@
         <div class="card-container">
           <!-- CARD 1 -->
           <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/03/Positano-Weather.jpg?w=1600&ssl=1')">
-            <div class="card-category">City</div>
+            <div class="card-category">Ciudad</div>
             <div class="card-description">
-              <h2>Home</h2>
-              <p>Lovely house</p>
+              <h2>Clima</h2>
+              <p>La información sobre tu destino:</p>
             </div>
           </div>
 
