--- a/src/templates/prueba1.html
+++ b/src/templates/prueba1.html
@@ -23,12 +23,10 @@
       <!-- Section para form y cards -->
       <section class="content">
         <!-- FORM -->
-        <div class="form">
-          <div class="search">
-            <input id="city-name-input" type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
+          <form action="{{ url_for('buscar_ciudad') }}" method="post">
+            <input name="city-name-input" type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
-          </div>
-        </div>
+          </form>
 
         <!-- CARD CONTAINER -->
         <div class="card-container">
@@ -46,20 +44,20 @@
             <div class="weather">
               <div class="weather-content">
                 <img src="../static/assets/rain.svg" class="weather-icon">
-                <h1 class="name">New York</h1>
-                <h2 class="temp">22°C</h2>
+                <h1 class="name">{{data.name}}</h1>
+                <h2 class="temp">{{data.temp}}°C</h2>
                 <div class="details">
                   <div class="col">
                     <img src="../static/assets/humidity.svg">
                     <div>
-                      <p class="humidity">50%</p>
+                      <p class="humidity">{{data.humidity}}%</p>
                       <p>Humidity</p>
                     </div>
                   </div>
                   <div class="col">
                     <img src="../static/assets/wind.svg">
                     <div>
-                      <p class="weather">Cloudy</p> <!-- Cambiado de wind a weather -->
+                      <p class="weather">{{data.weather}}</p> <!-- Cambiado de wind a weather -->
                       <p>Weather</p>
                     </div>
                   </div>
