--- a/src/templates/city.html
+++ b/src/templates/city.html
@@ -46,20 +46,20 @@
             <div class="weather">
               <div class="weather-content">
                 <img src="../static/assets/rain.svg" class="weather-icon">
-                <h1 class="name">New York</h1>
-                <h2 class="temp">22°C</h2>
+                <h1 class="name">{data.name}</h1>
+                <h2 class="temp">{data.temp}°C</h2>
                 <div class="details">
                   <div class="col">
                     <img src="../static/assets/humidity.svg">
                     <div>
-                      <p class="humidity">50%</p>
+                      <p id="humidity" class="humidity">{data.humidity}%</p>
                       <p>Humidity</p>
                     </div>
                   </div>
                   <div class="col">
                     <img src="../static/assets/wind.svg">
                     <div>
-                      <p class="weather">Cloudy</p> <!-- Cambiado de wind a weather -->
+                      <p id="weather" class="weather">{data.weather}</p> <!-- Cambiado de wind a weather -->
                       <p>Weather</p>
                     </div>
                   </div>
