--- a/src/templates/city_search.html
+++ b/src/templates/city_search.html
@@ -26,6 +26,6 @@
             <input name="city-name-input" type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
           </form>
-
+          <p> {{data.mensaje}} </p>
 </body>
 </html>
