busqueda por ticket implementada

--- a/src/templates/city_weather.html
+++ b/src/templates/city_weather.html
@@ -23,7 +23,7 @@
       <!-- Section para form y cards -->
       <section class="content">
         <!-- FORM -->
-          <form action="{{ url_for('buscar_ciudad') }}" method="post">
+          <form action="{{ url_for('city_weather') }}" method="post">
             <input name="city-name-input" type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
           </form>
