--- a/src/templates/ticket_weather.html
+++ b/src/templates/ticket_weather.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City</title>
+    <title>Ticket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../static/css/city.css">
+    <link rel="stylesheet" href="../static/css/ticket.css">
 </head>
 <body>
      <!-- NAVBAR -->
@@ -23,10 +23,14 @@
       <!-- Section para form y cards -->
       <section class="content">
         <!-- FORM -->
+        <div class="form">
           <form action="{{ url_for('ticket_weather') }}" method="post">
+            <div class="search">
             <input name="ticket-input" type="text" placeholder="Ingrese el ticket" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
+            </div>  
           </form>
+        </div>
 
         <p>
           {{data.name1}}, 
