--- a/src/templates/ticket_weather.html
+++ b/src/templates/ticket_weather.html
@@ -32,17 +32,63 @@
           </form>
         </div>
 
-        <p>
-          {{data.name1}}, 
-          {{data.temp1}},
-          {{data.humidity1}},
-          {{data.weather1}}
-        </p><p>
-          {{data.name2}}, 
-          {{data.temp2}},
-          {{data.humidity2}},
-          {{data.weather2}}
-        </p>
+          <!-- CARD CONTAINER -->
+          <div class="card-container">
+            <!-- CARD 1 -->
+                <div id="weather-card" class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/03/Positano-Weather.jpg?w=1600&ssl=1');">
+                    <div class="weather">
+                      <div class="weather-content">
+                        <img src="../static/assets/rain.svg" class="weather-icon">
+                        <h1 class="temp"> {{data.temp1}}°C</h1>
+                        <h2 class="card-category">{{data.name1}}</h2>
+                        <div class="details">
+                          <div class="col">
+                            <img src="../static/assets/humidity.svg">
+                            <div>
+                              <p class="humidity">{{data.humidity1}}%</p>
+                              <p>Humidity</p>
+                            </div>
+                          </div>
+                          <div class="col">
+                            <img src="../static/assets/wind.svg">
+                            <div>
+                              <p class="weather">{{data.weather1}}</p>
+                              <p>Weather</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+           
+    
+              <!-- CARD 2 -->
+              <div id="weather-card" class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+                <div class="weather">
+                  <div class="weather-content">
+                    <img src="../static/assets/rain.svg" class="weather-icon">
+                    <h1 class="temp"> {{data.temp2}}°C</h1>
+                    <h2 class="card-category">{{data.name2}}</h2>
+                    <div class="details">
+                      <div class="col">
+                        <img src="../static/assets/humidity.svg">
+                        <div>
+                          <p class="humidity">{{data.humidity2}}%</p>
+                          <p>Humidity</p>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <img src="../static/assets/wind.svg">
+                        <div>
+                          <p class="weather">{{data.weather2}}</p>
+                          <p>Weather</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
       </section>
 </body>
 </html>
