documentar hello.py

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -27,11 +27,11 @@
           <ul class="list-incline col-xs-12">
             <li class="btn btn-default btn-lg btn-pagina1">
               <i class="fa fa-pagina1"></i>
-              <a href="city.html"> City</a>
+              <a href="city_search"> City</a>
             </li>
             <li class="btn btn-default btn-lg btn-pagina2">
               <i class="fa fa-pagina2"></i>
-              <a href="ticket.html"> Ticket</a>
+              <a href="ticket_search"> Ticket</a>
             </li>
           </ul>
         </div>
