--- a/src/templates/ticket_weather.html
+++ b/src/templates/ticket_weather.html
@@ -35,7 +35,7 @@
           <!-- CARD CONTAINER -->
           <div class="card-container">
             <!-- CARD 1 -->
-                <div id="weather-card" class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/03/Positano-Weather.jpg?w=1600&ssl=1');">
+                <div id="weather-card" class="card card-weather" style="background-color: white;">
                     <div class="weather">
                       <div class="weather-content">
                         <img src="../static/assets/rain.svg" class="weather-icon">
@@ -63,7 +63,7 @@
            
     
               <!-- CARD 2 -->
-              <div id="weather-card" class="card card-weather" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://i0.wp.com/handluggageonly.co.uk/wp-content/uploads/2016/04/IMG_5589.jpg?w=1600&ssl=1');">
+              <div id="weather-card" class="card card-weather" style="background-color: white;">
                 <div class="weather">
                   <div class="weather-content">
                     <img src="../static/assets/rain.svg" class="weather-icon">
