--- a/src/static/css/city.css
+++ b/src/static/css/city.css
@@ -86,7 +86,7 @@ html, body {
   height: 425px;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
   background-size: cover !important;
-  color: white;
+  color: black;
   position: relative;
   border-radius: 5px;
   margin: 0 10px;
