--- a/src/templates/city_weather.html
+++ b/src/templates/city_weather.html
@@ -37,7 +37,7 @@
           <div id="weather-card" class="card weather-card" style="background-color: white;">
             <div class="weather">
               <div class="weather-content">
-                <img src="../static/assets/rain.svg" class="weather-icon">
+                <img src="../static/assets/else.png" id="weather-icon" class="weather-icon">
                 <h1 class="name">{{data.name}}</h1>
                 <h2 class="temp">{{data.temp}}°C</h2>
                 <div class="details">
@@ -61,5 +61,6 @@
           </div>
         </div>
       </section>
+      <script src="../static/js/set_logo.js" ></script>
 </body>
 </html>
