--- a/src/templates/city_search.html
+++ b/src/templates/city_search.html
@@ -19,7 +19,7 @@
       </nav>
 
 
-      <!-- Section para form y cards -->
+      <!-- Section form and cards -->
       <section class="content">
         <!-- FORM -->
         <div class="form">
