--- a/src/templates/city_weather.html
+++ b/src/templates/city_weather.html
@@ -20,7 +20,7 @@
 
       <h2 class="text-center">Tu ciudad</h2>
 
-      <!-- Section para form y cards -->
+      <!-- Section form and cards -->
       <section class="content">
         <!-- FORM -->
         <div class="form">
@@ -51,7 +51,7 @@
                   <div class="col">
                     <img src="../static/assets/wind.svg">
                     <div>
-                      <p class="weather">{{data.weather}}</p> <!-- Cambiado de wind a weather -->
+                      <p class="weather">{{data.weather}}</p> 
                       <p>Weather</p>
                     </div>
                   </div>
