--- a/src/templates/ticket_weather.html
+++ b/src/templates/ticket_weather.html
@@ -20,7 +20,7 @@
 
       <h2 class="text-center">Tu ciudad (por ticket)</h2>
 
-      <!-- Section para form y cards -->
+      <!-- Section form and cards -->
       <section class="content">
         <!-- FORM -->
         <div class="form">
@@ -38,7 +38,7 @@
                 <div id="weather-card" class="card card-weather" style="background-color: white;">
                     <div class="weather">
                       <div class="weather-content">
-                        <img src="../static/assets/rain.svg" class="weather-icon">
+                        <img src="../static/assets/else.png" class="weather-icon">
                         <h1 class="temp"> {{data.temp1}}°C</h1>
                         <h2 class="card-category">{{data.name1}}</h2>
                         <div class="details">
@@ -66,7 +66,7 @@
               <div id="weather-card" class="card card-weather" style="background-color: white;">
                 <div class="weather">
                   <div class="weather-content">
-                    <img src="../static/assets/rain.svg" class="weather-icon">
+                    <img src="../static/assets/else.png" class="weather-icon">
                     <h1 class="temp"> {{data.temp2}}°C</h1>
                     <h2 class="card-category">{{data.name2}}</h2>
                     <div class="details">
