--- a/src/templates/city_weather.html
+++ b/src/templates/city_weather.html
@@ -18,7 +18,7 @@
         </div>
       </nav>
 
-      <h2 class="text-center">Tu ciudad</h2>
+      <h2 class="text-center">Your City</h2>
 
       <!-- Section form and cards -->
       <section class="content">
