--- a/src/templates/city_search.html
+++ b/src/templates/city_search.html
@@ -25,7 +25,7 @@
         <div class="form">
           <form action="{{ url_for('city_weather') }}" method="post">
             <div class="search">
-            <input name="city-name-input" type="text" placeholder="Ingrese el nombre de la ciudad" spellcheck="false"> 
+            <input name="city-name-input" type="text" placeholder="Enter the city name" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
             </div>
           </form>
