--- a/src/templates/ticket_search.html
+++ b/src/templates/ticket_search.html
@@ -25,7 +25,7 @@
         <div class="form">
           <form action="{{ url_for('ticket_weather') }}" method="post">
             <div class="search">
-            <input name="ticket-input" type="text" placeholder="Ingrese el ticket" spellcheck="false"> 
+            <input name="ticket-input" type="text" placeholder="Enter the ticket" spellcheck="false"> 
             <button id="get-weather-button" type="submit"><img src="../static/assets/search.svg"></button>
             </div>
           </form>
